# electricity-demand-forecasting

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
notebooks/: A1_full_pipeline.ipynb
reports/: A1_report.docx
scripts/: download_data.py  evaluate_models.py  make_features.py  run_pipeline.py
src/electricity_demand/: __init__.py  config.py  data.py  evaluation.py  features.py  pipeline.py  plotting.py
src/electricity_demand/models/: __init__.py  bayesian.py  benchmarks.py  feature_models.py  neural.py  sarimax.py
tests/: test_benchmarks.py  test_evaluation.py  test_features.py
